Fix grid overflow

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -12,7 +12,7 @@ main.layout-conceptual {
  display: grid;
  margin-top: 1rem;
  gap: 1rem 2rem;
- grid-template-columns: minmax(18rem, 18%) auto minmax(12rem, 12%);
+ grid-template-columns: minmax(18rem, 18%) minmax(0, 1fr) minmax(12rem, 12%);
  grid-template-rows: auto auto;
  grid-template-areas:
   'breadcrumb breadcrumb actionbar'
